--- a/SCME.UI/ResourceDictionaries/CommonResources.xaml
+++ b/SCME.UI/ResourceDictionaries/CommonResources.xaml
@@ -76,7 +76,7 @@
     <GridLength         x:Key="MenuBorderOffset"        >100</GridLength>
     <GridLength         x:Key="ControlPanelSize"        >300</GridLength>
 
-    <SolidColorBrush x:Key="xBlue1"         Color="#00A7FF"/>
+    <SolidColorBrush x:Key="xBlue1"         Color="#FF0078D7"/>
     <SolidColorBrush x:Key="xBlue2"         Color="#0073C6"/>
     <SolidColorBrush x:Key="xBlue3"         Color="#008298"/>
     <SolidColorBrush x:Key="xBlue4"         Color="#00A7FF" Opacity="0.5"/>
