--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -21,26 +21,25 @@
     </UserControl.Resources>
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="Column0"/>
+            <ColumnDefinition Width="180" SharedSizeGroup="Column0"/>
             <ColumnDefinition Width="280" SharedSizeGroup="Column1"/>
             <ColumnDefinition Width="30"/>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="Column3"/>
-            <ColumnDefinition Width="280" SharedSizeGroup="Column4"/>
+            <ColumnDefinition Width="120" SharedSizeGroup="Column3"/>
+            <ColumnDefinition Width="270" SharedSizeGroup="Column4"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" Name="normRow"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="45" Name="normRow"/>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="{x:Static res:Resources.CommutationTypeT}" Margin="0,0,10,0" Foreground="Black"/>
         <ComboBox x:Name="normComboBox" ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}" SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="0" Grid.Column="1"/>
         <Label Content="{x:Static res:Resources.Force}" Grid.Row="0" Grid.Column="3" Foreground="Black"/>
-        <customControl:NumericUpDown Value="{Binding ParameterClamp}" Grid.Row="0" Grid.Column="4"/>
+        <customControl:ValidatingTextBox Text="{Binding ParameterClamp}" IsNumeric="True" Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
-        <customControl:NumericUpDown Value="{Binding Height}" Grid.Row="1" Grid.Column="1"/>
+        <customControl:ValidatingTextBox Text="{Binding Height}" IsNumeric="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Content="{x:Static res:Resources.Temp}" Grid.Row="1" Grid.Column="3" Foreground="Black"/>
-        <customControl:NumericUpDown Value="{Binding Temperature}" Grid.Column="4" Grid.Row="1"/>
+        <customControl:ValidatingTextBox Text="{Binding Temperature}" IsNumeric="True" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Content="{x:Static res:Resources.ParameterType}" Grid.Row="2" Grid.Column="0" Foreground="Black" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
         <ComboBox ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}" SelectedValuePath="TestParametersType" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" Height="{Binding ActualHeight, ElementName=normComboBox}" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
         <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,5" Width="Auto" Height="{Binding ActualHeight, ElementName=normComboBox}" Background="#FF0078D7" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Click="AddTestParameters_Click"/>
