--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
@@ -13,53 +13,44 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column0g" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column1g"/>
+            <ColumnDefinition Width="180" SharedSizeGroup="Column0g" />
+            <ColumnDefinition Width="220" SharedSizeGroup="Column1g"/>
             <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column3g" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column4g"/>
+            <ColumnDefinition Width="170" SharedSizeGroup="Column3g" />
+            <ColumnDefinition Width="220" SharedSizeGroup="Column4g"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="45" />
+            <RowDefinition Height="45" />
+            <RowDefinition Height="45" />
+            <RowDefinition Height="45" />
+            <RowDefinition Height="45" />
+            <RowDefinition Height="45" />
         </Grid.RowDefinitions>
-
         <Label Foreground="Black" Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" />
-        <ComboBox Margin="10,0,0,0" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding UdsmUrsmTestType}" />
+        <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding UdsmUrsmTestType}" />
         <Label Foreground="Black" Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
-        <customControls:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding UdsmUrsmCurrentLimit }" StringFormat="{}{0:N0}"/>
-
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmCurrentLimit, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding UdsmUrsmVoltageLimitD }" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmVoltageLimitD}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=1}" IsFloat="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
-        <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding UdsmUrsmVoltageLimitR}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
-
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmVoltageLimitR}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource TT2V}, ConverterParameter=2}" IsFloat="True" Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding UdsmUrsmPlateTime}" />
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmPlateTime}" IsFloat="True" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
-        <customControls:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding UdsmUrsmRampUpVoltage}" />
-
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmRampUpVoltage}" IsFloat="True" Grid.Row="2" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding UdsmUrsmStartVoltage}" />
+    <customControls:ValidatingTextBox Text="{Binding UdsmUrsmStartVoltage}" IsFloat="True" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
         <Label Foreground="Black" Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
-        <ComboBox Margin="10,0,0,0" Grid.Column="4" Grid.Row="3" ItemsSource="{Binding Source={StaticResource VoltageFrequency}}" SelectedValue="{Binding UdsmUrsmVoltageFrequency}" />
-
+        <ComboBox Grid.Column="4" Grid.Row="3" ItemsSource="{Binding Source={StaticResource VoltageFrequency}}" SelectedValue="{Binding UdsmUrsmVoltageFrequency}" />
         <Label Foreground="Black" Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
-        <ComboBox Margin="10,0,0,0" Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding UdsmUrsmFrequencyDivisor}" />
-
+        <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding UdsmUrsmFrequencyDivisor}" />
     <Label Foreground="Black" Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MaxIdsm_mA}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIdsmToVisibilityConverter}}" />
-    <customControls:NumericUpDown Grid.Column="1" Interval="0.5" Grid.Row="5" Value="{Binding IDSM}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIdsmToVisibilityConverter}}" StringFormat="{}{0:N1}"/>
-
-
+    <customControls:ValidatingTextBox Text="{Binding IDSM, StringFormat={}{0:N1}}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIdsmToVisibilityConverter}}" IsFloat="True" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MaxIrsm_mA}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIrsmToVisibilityConverter}}"/>
-    <customControls:NumericUpDown Grid.Column="4" Interval="0.5" Grid.Row="5" Value="{Binding IRSM}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIrsmToVisibilityConverter}}" StringFormat="{}{0:N1}"/>
+    <customControls:ValidatingTextBox Text="{Binding IRSM, StringFormat={}{0:N1}}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource bvtUdsmUrsmIrsmToVisibilityConverter}}" IsFloat="True" Grid.Row="5" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 </Grid>
