--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -14,7 +14,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
@@ -36,45 +35,32 @@
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Type}" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource VtmTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TestType}" />
-
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Current_A}" />
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding RampCurrent}" />
+    <customControls:ValidatingTextBox Text="{Binding RampCurrent}" IsFloat="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding RampTime}" />
-
+    <customControls:ValidatingTextBox Text="{Binding RampTime}" IsFloat="True" Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <CheckBox Foreground="Black" BorderBrush="#FFC9C9C9" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" IsChecked="{Binding IsRampOpeningEnabled}" Content="{x:Static res:Resources.IsHeatEnabled}" />
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding RampOpeningCurrent }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+    <customControls:ValidatingTextBox Text="{Binding RampOpeningCurrent}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" IsFloat="True" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="4" Grid.Row="3" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Value="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-
-    
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Current_A}" /> 
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding SinusCurrent}" />
+    <customControls:ValidatingTextBox Text="{Binding RampOpeningTime}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" IsFloat="True" Grid.Row="3" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Current_A}" />
+    <customControls:ValidatingTextBox Text="{Binding SinusCurrent}" IsFloat="True" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Value="{Binding SinusTime }" />
-    
-    
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Current_A}" /> 
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="5" Value="{Binding CurveCurrent }" />
+    <customControls:ValidatingTextBox Text="{Binding SinusTime}" IsFloat="True" Grid.Row="4" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Current_A}" />
+    <customControls:ValidatingTextBox Text="{Binding CurveCurrent}" IsFloat="True" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Value="{Binding CurveTime }" />
-    
+    <customControls:ValidatingTextBox Text="{Binding CurveTime}" IsFloat="True" Grid.Row="5" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.CurveFactor}" />
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="6" Value="{Binding CurveFactor }" />
+    <customControls:ValidatingTextBox Text="{Binding CurveFactor}" IsFloat="True" Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.AdditionalTime_us}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding CurveAddTime }" />
-
+    <customControls:ValidatingTextBox Text="{Binding CurveAddTime}" IsFloat="True" Grid.Row="6" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <CheckBox Foreground="Black" BorderBrush="#FFC9C9C9" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" IsChecked="{Binding UseFullScale}" Content="{x:Static res:Resources.UseFullScale}" /> 
-    
     <Label Foreground="Black" Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Count}" />
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="8" Value="{Binding Count }" />
+    <customControls:ValidatingTextBox Text="{Binding Count}" IsFloat="True" Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.MaxVtm_V}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="8" Value="{Binding VTM }" StringFormat="{}{0:N2}" />
-    
+    <customControls:ValidatingTextBox Text="{Binding VTM, StringFormat={}{0:N2}}" IsFloat="True" Grid.Row="8" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 </Grid>
