--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
@@ -16,37 +16,31 @@
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column0d" />
+        <ColumnDefinition Width="20" SharedSizeGroup="Column0d" />
         <ColumnDefinition Width="220" SharedSizeGroup="Column1d"/>
         <ColumnDefinition Width="30" />
         <ColumnDefinition Width="auto" SharedSizeGroup="Column3d" />
         <ColumnDefinition Width="220" SharedSizeGroup="Column4d"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
+        <RowDefinition Height="45" />
+        <RowDefinition Height="45" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static res:Resources.Mode}" />
     <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource DvdtModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Static res:Resources.DvDtVoltage}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding Voltage }" />
-
+    <customControls:ValidatingTextBox Text="{Binding Voltage}" IsNumeric="True" Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Content="{x:Static res:Resources.DvdtVoltageRate}" />
-    <ComboBox Grid.Column="4" Grid.Row="2"  ItemsSource="{Binding Source={StaticResource VoltageRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding VoltageRate}"
+    <ComboBox Grid.Column="4" Grid.Row="2" ItemsSource="{Binding Source={StaticResource VoltageRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding VoltageRate}"
               Visibility="{Binding Mode, Converter={StaticResource DT2V}}" />
-
     <Label Foreground="Black" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Content="{x:Static res:Resources.DvdtConfirmationCount}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Value="{Binding ConfirmationCount }" />
-
+    <customControls:ValidatingTextBox Text="{Binding ConfirmationCount}" IsNumeric="True" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Grid.Row="3" Grid.Column="4"  Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Value="{Binding VoltageRateOffSet }" />
-
+    <customControls:ValidatingTextBox Text="{Binding VoltageRateOffSet}" IsNumeric="True" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Grid.Row="4" Grid.Column="4"  Margin="0,7,0,6" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
     <Label Foreground="Black" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Content="{x:Static res:Resources.DvdtVoltageRateLimit}" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Value="{Binding VoltageRateLimit }" />
+    <customControls:ValidatingTextBox Text="{Binding VoltageRateLimit}" IsNumeric="True" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Grid.Row="5" Grid.Column="4" Margin="0,6" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 </Grid>
