--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -38,11 +38,11 @@
             <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Grid.Row="1" Grid.Column="0" Width="Auto" Height="60" Background="#FF0078D7" IsEnabled="{Binding IsEditModeInActive}" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Click="CreateNewProfile_Click"/>
             <customControls:ValidatingTextBox Style="{StaticResource PlaceholderTextBox}" Text="{Binding SearchingName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="0" Height="60" Background="White" Tag="{x:Static res:Resources.Search}" TextChanged="TextBoxFind_TextChanged"/>
             <customControls:ListViewMouseLeftButtonScroll x:Name="ListViewProfiles" Style="{StaticResource DefaultListView}" ItemsSource="{Binding ProfilesSource.View}" SelectedValue="{Binding SelectedProfile}" ScrollViewer.CanContentScroll="False" Grid.Row="3" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling" VirtualizingStackPanel.CacheLengthUnit="Pixel" VirtualizingStackPanel.CacheLength="1000" SelectionChanged="ListViewProfiles_OnSelectionChanged" MouseMove="ListViewProfiles_MouseMove">
-               <ListView.ItemTemplate>
-                   <DataTemplate DataType="profiles:Profile">
+                <ListView.ItemTemplate>
+                    <DataTemplate DataType="profiles:Profile">
                         <Label Name="label" Content="{Binding Name}" Foreground="{TemplateBinding TextBlock.Foreground}" Margin="3,0,0,0"/>
                     </DataTemplate>
-               </ListView.ItemTemplate>
+                </ListView.ItemTemplate>
             </customControls:ListViewMouseLeftButtonScroll>
             <Button x:Name="BackButton" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Back}" Grid.Row="4" Grid.Column="0" Width="Auto" Click="GoBack_Click"/>
         </Grid>
@@ -64,25 +64,29 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <customControls:ValidatingTextBox Grid.Row="0" Grid.Column="0" Text="{Binding SelectedProfileNameCopy}" BorderThickness="0" Margin="40,0,0,0" VerticalContentAlignment="Center" Background="#FFC9C9C9" Foreground="Black" IsEnabled="{Binding IsEditModeActive}"/>
-                <Button Style="{StaticResource ButtonWithIcon}" Grid.Row="0" Grid.Column="1" IsEnabled="{Binding IsEditModeEnabled}" Click="BeginEditProfile_Click">
-                    <Path Style="{StaticResource PathIcon}" Data="{StaticResource Edit}"/>
-                </Button>
+                <customControls:ValidatingTextBox Grid.Row="0" Grid.Column="0" Text="{Binding SelectedProfileNameCopy}" BorderThickness="0" Margin="10,0,0,0" VerticalContentAlignment="Center" Background="#FFC9C9C9" Foreground="Black" IsEnabled="{Binding IsEditModeActive}"/>
                 <Button Style="{StaticResource ButtonWithIcon}" Grid.Row="0" Grid.Column="2" Margin="5,0" IsEnabled="{Binding IsEditModeActive}" Click="CancelEditProfile_Click">
                     <Path Style="{StaticResource PathIcon}" Data="{StaticResource Cansel}"/>
                 </Button>
-                <Button Style="{StaticResource ButtonWithIcon}" Grid.Row="0" Grid.Column="3" IsEnabled="{Binding IsEditModeActive}" Click="EndEditProfile_Click">
+                <Button Style="{StaticResource ButtonWithIcon}" Grid.Row="0" Grid.Column="1" IsEnabled="{Binding IsEditModeEnabled}" Click="BeginEditProfile_Click">
+                    <Path Style="{StaticResource PathIcon}" Data="{StaticResource Edit}"/>
+                </Button>
+                <Button Style="{StaticResource ButtonWithIcon}" Grid.Row="0" Grid.Column="3" Margin="0,0,10,0" IsEnabled="{Binding IsEditModeActive}" Click="EndEditProfile_Click">
                     <Path Style="{StaticResource PathIcon}" Data="{StaticResource Save}"/>
                 </Button>
             </Grid>
             <customControls:ScrollViewerLeftMouseButtonScroll Style="{StaticResource DefaultScrollViewer}" Grid.Row="1" Grid.Column="0" Grid.RowSpan="3">
                 <Grid IsSharedSizeScope="True" Background="#FFEDEDED">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="103*"/>
+                        <ColumnDefinition Width="819*"/>
+                    </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <StackPanel Grid.Row="1" Grid.Column="1" Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}">
+                    <StackPanel Grid.Row="1" Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}" Grid.ColumnSpan="2">
 
                         <Border BorderThickness="1" BorderBrush="#FFC9C9C9" Margin="10,10,10,0" IsEnabled="{Binding IsEditModeActive}">
                             <profilesPageComponents:AddTestParameterUserControl x:Name="AddTestParameterUserControl" DataContext="{Binding ProfileDeepDataCopy}" HorizontalAlignment="Stretch" AddTestParametersEvent="AddTestParametersEvent_Click"/>
@@ -93,7 +97,7 @@
                         </Border>
                     </StackPanel>
 
-                    <profilesPageComponents:ListViewTestParametersUserControl ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}" Grid.Row="2" Grid.Column="1" Margin="10,0" HorizontalContentAlignment="Stretch" ContentIsEnabled="{Binding IsEditModeActive}" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"/>
+                    <profilesPageComponents:ListViewTestParametersUserControl ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}" Grid.Row="2" Margin="10,0,10,0" HorizontalContentAlignment="Stretch" ContentIsEnabled="{Binding IsEditModeActive}" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel" Grid.ColumnSpan="2"/>
 
                 </Grid>
             </customControls:ScrollViewerLeftMouseButtonScroll>
