--- a/SCME.WpfControlLibrary/Styles/ListView.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListView.xaml
@@ -21,11 +21,11 @@
                                     <Grid Name="background"  Background="Transparent"  />
                                     <ContentPresenter Content="{TemplateBinding ContentControl.Content}" Height="60" x:Name="ContentPresenter"
                                                       TextBlock.Foreground="Black"
-                                                      ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"/>
+                                                      ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" Margin="8,0"/>
                                 </Grid>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="background" Property="Background" Value="{StaticResource PurpleBrush1}" />
+                                        <Setter TargetName="background" Property="Background" Value="{StaticResource xBlue1}" />
                                         <Setter TargetName="ContentPresenter" Property="TextBlock.Foreground" Value="White"></Setter>
                                     </Trigger>
                                 </ControlTemplate.Triggers>
@@ -69,7 +69,7 @@
                                         <Setter.Value>
                                             <ControlTemplate TargetType="{x:Type RepeatButton}">
                                                 <Grid Name="border">
-                                                    <Border Background="{StaticResource PurpleBrush1}" Width="{TemplateBinding Width}"
+                                                    <Border Background="{StaticResource xBlue1}" Width="{TemplateBinding Width}"
                                     Height="{TemplateBinding Width}" CornerRadius="2">
                                                         <Path Name="path" Stretch="Uniform" Margin="5"
                                       Stroke="White" StrokeThickness="6"
@@ -78,7 +78,7 @@
                                                 </Grid>
                                                 <ControlTemplate.Triggers>
                                                     <Trigger Property="IsPressed" Value="True">
-                                                        <Setter TargetName="border" Property="Background" Value="{StaticResource PurpleBrush1}" />
+                                                        <Setter TargetName="border" Property="Background" Value="{StaticResource xBlue1}" />
                                                         <Setter TargetName="path" Property="Margin" Value="2" />
                                                     </Trigger>
                                                 </ControlTemplate.Triggers>
@@ -117,7 +117,7 @@
                                                                   Command="ScrollBar.PageUpCommand" />
                                             </Track.DecreaseRepeatButton>
                                             <Track.Thumb>
-                                                <Thumb MinHeight="50" Background="{StaticResource PurpleBrush1}" 
+                                                <Thumb MinHeight="50" Background="{StaticResource xBlue1}" 
                                                            Style="{StaticResource ScrollBarThumb}" />
                                             </Track.Thumb>
                                             <Track.IncreaseRepeatButton>
